discussion/kv_engine/182453/182453_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54463: Static assert the size of Item

That prevents that we accidentally increase that struct size.

Change-Id: I245dbd1d8a86a9f88a120a6b4cc2e588ec5e81f0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-11-08 13:19:11.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-08 13:19:23.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/323714/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-08 13:57:53.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/533/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\item.h(672): error C2338: Please do not increase this size if not strictly necessary ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/533/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/384/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/item.h:672:1:
error: static_assert failed due to requirement "sizeof(Item) == 112" "Please do not increase this size if not strictly necessary"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/384/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/394/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/item.h:672:1: error: static_assert failed due to requirement "sizeof(Item) == 112" "Please do not increase this size if not strictly necessary" [clang-diagnostic-error]
static_assert(sizeof(Item) == 112,
^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/394/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/item.h:672:1:
error: static_assert failed due to requirement "sizeof(Item) == 112" "Please do not increase this size if not strictly necessary" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/394/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/419/ : FAILURE

Compile error at [2022-11-08T13:33:05.155Z] ../kv_engine/engines/ep/src/item.h:672:28:
error: static assertion failed: Please do not increase this size if not strictly necessary
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/419/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/396/ : FAILURE

Compile error at [2022-11-08T13:34:58.065Z] ../kv_engine/engines/ep/src/item.h:672:1:
error: static_assert failed due to requirement "sizeof(Item) == 112" "Please do not increase this size if not strictly necessary"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/396/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/409/ : FAILURE

Compile error at [2022-11-08T13:28:21.368Z] ../kv_engine/engines/ep/src/item.h:672:28:
error: static assertion failed: Please do not increase this size if not strictly necessary
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/409/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/409/ : FAILURE

Compile error at [2022-11-08T13:32:57.710Z] ../kv_engine/engines/ep/src/item.h:672:1:
error: static_assert failed due to requirement "sizeof(Item) == 112" "Please do not increase this size if not strictly necessary"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/409/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/396/ : FAILURE

Compile error at [2022-11-08T13:24:33.098Z] ../kv_engine/engines/ep/src/item.h:672:28:
error: static assertion failed: Please do not increase this size if not strictly necessary
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/396/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/418/ : FAILURE

Compile error at [2022-11-08T13:31:29.348Z] ../kv_engine/engines/ep/src/item.h:672:1:
error: static_assert failed due to requirement "sizeof(Item) == 112" "Please do not increase this size if not strictly necessary"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/418/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/639/ : FAILURE

Timeout of a CTest test [2022-11-08T13:57:46.458Z] 444/444 Test #442: cluster_test ................................................................................................} ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/639/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21025/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-11-25 09:43:15.000000000
Message: 
Abandoned

Assert already there
----------------------------------------------------------------------------------------------------------------------
